<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="130dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/start"
            android:textColor="#000000" />

        <Button
            android:id="@+id/bookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="14dp"
            android:text="@string/book" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/end"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/date"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/textView2"
            android:text="@string/placeholder_placeTime"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/endText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startText"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/placeholder_placeTime"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endText"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/textView4"
            android:text="@string/placeholder_date"
            android:textColor="#000000" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>