<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/peopleInput"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">


        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="130dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/start"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/end"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/image"
            android:text="@string/date"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/startText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/textView2"
            android:text="@string/placeholder_placeTime"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/endText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startText"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textView3"
            android:text="@string/placeholder_placeTime"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endText"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/textView4"
            android:text="@string/placeholder_date"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/image"
            android:text="Személyek:"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/peopleNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dateText"
            android:layout_marginStart="5dp"
            android:layout_marginTop="-4dp"
            android:layout_toEndOf="@+id/textView5"
            android:ems="10"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="1" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/updateButton"
            android:layout_marginStart="50dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/updateButton"
            android:text="Törlés" />

        <Button
            android:id="@+id/updateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="Módosítás" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>